--- a/scrims.css
+++ b/scrims.css
@@ -70,7 +70,7 @@ body {
   font-family: "Passion One", cursive;
   font-size: 20px;
 }
-.logo-text-2 {
+.logo-text-1 span {
   padding-top: 30px;
   padding-left: 5px;
   font-family: "Courgette", cursive;
