--- a/scrims.css
+++ b/scrims.css
@@ -64,15 +64,13 @@ body {
   text-align: center;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+
 .logo-text-1 {
-  padding-top: 30px;
   color: white;
   font-family: "Passion One", cursive;
   font-size: 20px;
 }
 .logo-text-1 span {
-  padding-top: 30px;
-  padding-left: 5px;
   font-family: "Courgette", cursive;
   font-size: 20px;
   color: #5500c0;
@@ -117,21 +115,24 @@ nav {
 
   border-bottom: #5500c0 2px solid;
 }
+
 nav .logo {
-  margin: none;
   width: 5rem;
-  height: 5rem;
-  box-sizing: border-box;
-  float: center;
-  margin-left: 4rem;
 }
+
+.logo-container {
+  display: flex;
+  margin: auto 2em;
+}
+
+.logo-branding {
+  margin: auto;
+}
+
 nav ul {
   display: flex;
-  margin: 1em auto;
-  text-align: right;
-  padding-top: 0.5rem;
+  margin: 1em;
   font-family: "Passion One", cursive;
-  padding-left: 400px;
   font-size: 20px;
 }
 nav ul li {
