--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
 @media screen and (max-width: 720px) {
   nav ul {
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    position: fixed;
+    opacity: 0.8;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    background: #1f1f1f;
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+    flex-direction: column;
+  }
+
+  .hidden {
     display: none;
+  }
+
+  nav ul li {
+    margin: auto;
+    padding: 0;
+  }
+
+  .burger {
+    display: block;
   }
 
   .hero {
@@ -14,5 +37,11 @@
   .img-container {
     margin: auto;
     width: 90%;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .inner-container {
+    grid-template-columns: none;
   }
 }
