--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
 @media screen and (max-width: 720px) {
   nav ul {
-    -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
     position: fixed;
-    opacity: 0.8;
-    -webkit-transform: translateX(0%);
-    transform: translateX(0%);
+
     background: #1f1f1f;
     width: 100%;
     height: 100vh;
     margin: auto;
     flex-direction: column;
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    transition: all ease-in 0.5s;
+  }
+
+  .nav-active {
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    opacity: 0.8;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
   }
 
   .hidden {
