--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @media screen and (max-width: 720px) {
   nav ul {
     position: fixed;
-
     background: #000000b6;
     width: 100%;
     height: 100vh;
@@ -9,13 +8,18 @@
     flex-direction: column;
     -webkit-transform: translateX(-100%);
     transform: translateX(-100%);
-    transition: all ease-in 0.5s;
+    transition: transform ease-in 0.5s;
+  }
+
+  .hidden {
+    display: none;
   }
 
   .nav-active {
-    -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
+    -webkit-transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
     -webkit-transform: translateX(0%);
+
     transform: translateX(0%);
   }
 
@@ -28,6 +32,8 @@
 
   .burger {
     display: block;
+    background: #000;
+    padding: 0.2rem;
   }
 
   .hero {
